# bmedesign-cpsc

./: .gitattributes  .gitignore  EDA.ipynb  ft.py  pyproject.toml  requirements.txt  shape.py  signal.m
archive/: dataset.py  main.py  model.py  pipeline.py  plot.py  utils.py
archive/data/: unlabeled_predictions.csv
article/: paper.md
article/word/: cpsc.docx
data/: predictions_parallel.csv  testdata.csv  traindata.csv  unlabeled_predictions.csv  数据说明.txt
models/: hybrid_model_parallel_final_Hybrid_CNN.pth
models/hybrid_model_parallel_final/fold_1/: Hybrid_CNN.pth  Hybrid_XGB.json  IP.joblib
models/hybrid_model_parallel_final/fold_2/: Hybrid_CNN.pth  Hybrid_XGB.json  IP.joblib
models/hybrid_model_parallel_final/fold_3/: Hybrid_CNN.pth  Hybrid_XGB.json  IP.joblib
models/hybrid_model_parallel_final/fold_4/: Hybrid_CNN.pth  Hybrid_XGB.json  IP.joblib
models/hybrid_model_parallel_final/fold_5/: Hybrid_CNN.pth  Hybrid_XGB.json  IP.joblib
src/: EDA.ipynb  dataset.py  eval.py  main.ipynb  main.py  model.py  net.py  pipeline.py  plot.py  utils.py
src/comparison/decision_tree/: decision_tree_validation_evaluation_metrics.csv  main.py
src/comparison/gaussian_mixture/: gmm_validation_evaluation_metrics.csv  main.py
src/main/: eval.py  evaluation_results.csv  evaluation_results_noisy_multi_snr.csv  fold_evaluation_metrics.csv  main.py  main_script_final_validation_metrics.csv  model.py  robustness.py
src/utils/: dataset.py  pipeline.py  plot.py  plot_avg_fft_spectrum.py  pre_train.py  signal.py  signal_toolkit.py
test/: unlabeled_predictions.csv
(+6 files in other folders)
